add build context in docker-compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,7 @@ services:
   homepage:
     build:
       dockerfile: ./Dockerfile
+      context: .
     networks:
       - nginx # add the nginx network
     expose:
